lib/fast_search_engine_bindings.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// FFI bindings for FastSearchEngine
class FastSearchEngineBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  FastSearchEngineBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  FastSearchEngineBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  late final ffi.Pointer<ffi.UintPtr> ___security_cookie = _lookup<ffi.UintPtr>(
    '__security_cookie',
  );

  int get __security_cookie => ___security_cookie.value;

  set __security_cookie(int value) => ___security_cookie.value = value;

  SearchEngineHandle Engine_Create() {
    return _Engine_Create();
  }

  late final _Engine_CreatePtr =
      _lookup<ffi.NativeFunction<SearchEngineHandle Function()>>(
        'Engine_Create',
      );
  late final _Engine_Create =
      _Engine_CreatePtr.asFunction<SearchEngineHandle Function()>();

  int Engine_BuildIndex(
    SearchEngineHandle handle,
    ffi.Pointer<ffi.WChar> driveLetter,
  ) {
    return _Engine_BuildIndex(handle, driveLetter);
  }

  late final _Engine_BuildIndexPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(SearchEngineHandle, ffi.Pointer<ffi.WChar>)
        >
      >('Engine_BuildIndex');
  late final _Engine_BuildIndex =
      _Engine_BuildIndexPtr.asFunction<
        int Function(SearchEngineHandle, ffi.Pointer<ffi.WChar>)
      >();

  int Engine_GetFileCount(SearchEngineHandle handle) {
    return _Engine_GetFileCount(handle);
  }

  late final _Engine_GetFileCountPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(SearchEngineHandle)>>(
        'Engine_GetFileCount',
      );
  late final _Engine_GetFileCount =
      _Engine_GetFileCountPtr.asFunction<int Function(SearchEngineHandle)>();

  SearchResults Engine_Search(
    SearchEngineHandle handle,
    ffi.Pointer<ffi.WChar> keyword,
    ffi.Pointer<ffi.WChar> basePath,
    int maxResults,
  ) {
    return _Engine_Search(handle, keyword, basePath, maxResults);
  }

  late final _Engine_SearchPtr =
      _lookup<
        ffi.NativeFunction<
          SearchResults Function(
            SearchEngineHandle,
            ffi.Pointer<ffi.WChar>,
            ffi.Pointer<ffi.WChar>,
            ffi.Int,
          )
        >
      >('Engine_Search');
  late final _Engine_Search =
      _Engine_SearchPtr.asFunction<
        SearchResults Function(
          SearchEngineHandle,
          ffi.Pointer<ffi.WChar>,
          ffi.Pointer<ffi.WChar>,
          int,
        )
      >();

  void Engine_FreeSearchResults(ffi.Pointer<SearchResults> results) {
    return _Engine_FreeSearchResults(results);
  }

  late final _Engine_FreeSearchResultsPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<SearchResults>)>
      >('Engine_FreeSearchResults');
  late final _Engine_FreeSearchResults =
      _Engine_FreeSearchResultsPtr.asFunction<
        void Function(ffi.Pointer<SearchResults>)
      >();

  void Engine_Destroy(SearchEngineHandle handle) {
    return _Engine_Destroy(handle);
  }

  late final _Engine_DestroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(SearchEngineHandle)>>(
        'Engine_Destroy',
      );
  late final _Engine_Destroy =
      _Engine_DestroyPtr.asFunction<void Function(SearchEngineHandle)>();
}

final class SearchResultItem extends ffi.Struct {
  external ffi.Pointer<ffi.WChar> fileName;

  external ffi.Pointer<ffi.WChar> filePath;

  @ffi.UnsignedLongLong()
  external int fileSize;

  @ffi.UnsignedLongLong()
  external int lastWriteTime;

  @ffi.UnsignedLongLong()
  external int creationTime;
}

final class SearchResults extends ffi.Struct {
  external ffi.Pointer<SearchResultItem> items;

  @ffi.Int()
  external int count;
}

/// ///////////////////////////
typedef SearchEngineHandle = ffi.Pointer<ffi.Void>;
